Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26155

BorderImage statusChanged signal fired twice on load local / empty file

    XMLWordPrintable

Details

    • Id341d1c76d45e3fca19260293f632b0b51a34e90

    Description

      The BorderImage::load function for src/quick/items/qquickborderimage.cpp has an emit statusChanged statement at the end, which seems superfluous, as each possible branch has a statusChanged event.

      In the cases where the file is not in a loading state (e.g. does not have to be pulled from a network) or is empty, the statusChanged signal will be fired twice.

      Attachments

        Activity

          People

            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: