Remove superfluous statusChanged signal

If the file name is empty, or is a local file, statusChanged would be
emitted twice.

Task-number: QTBUG-26155
Change-Id: Id341d1c76d45e3fca19260293f632b0b51a34e90
Reviewed-by: Andrew den Exter <andrew.den-exter@nokia.com>